docs/grammar.txt
# === PROGRAM ENTRY ===
program                 ::= global_statement_list [ TOK_EOF ] | ε

# === LISTS ===
global_statement_list   ::= global_statement { global_statement }
op_global_statement_list ::= global_statement_list | ε
local_statement_list    ::= local_statement { local_statement }
op_local_statement_list ::= local_statement_list | ε
comparison_list         ::= comparison_pair { comparison_pair }

# === STATEMENTS ===
global_statement        ::= function_def | var_def | if_stmt | while_stmt
                          | for_stmt | loop_control_stmt | assign_stmt
                          | compound_assign_stmt | expr_stmt

local_statement         ::= var_def | return_stmt | if_stmt | while_stmt
                          | for_stmt | loop_control_stmt | assign_stmt
                          | compound_assign_stmt | expr_stmt

# === EXPRESSION STATEMENT ===
expr_stmt               ::= logical_or

# === ASSIGNMENT ===
assign_stmt             ::= TOK_ID TOK_ASSIGN logical_or
compound_assign_stmt    ::= TOK_ID ( TOK_PLUS_ASSIGN | TOK_MINUS_ASSIGN
                          | TOK_STAR_ASSIGN | TOK_SLASH_ASSIGN ) logical_or

# === VARIABLE DECLARATION ===
var_def                 ::= TOK_VAR TOK_ID variable_type TOK_ASSIGN logical_or
variable_type           ::= explicit_type | implicit_type
explicit_type           ::= TOK_COLON type_definition
implicit_type           ::= ε

# === FUNCTION DEFINITION ===
function_def            ::= TOK_FUNCTION TOK_ID TOK_L_PAREN parameters_list TOK_R_PAREN TOK_ARROW return_type_definition body_def
parameters_list         ::= parameter { TOK_COMMA parameter } | ε
parameter               ::= TOK_ID TOK_COLON type_definition
body_def                ::= TOK_L_BRACE op_local_statement_list TOK_R_BRACE
return_stmt             ::= TOK_RETURN [ logical_or ]

# === FUNCTION CALL ===
primary_expr            ::= TOK_ID TOK_L_PAREN arguments_list TOK_R_PAREN
                          | TOK_L_PAREN logical_or TOK_R_PAREN
arguments_list          ::= logical_or { TOK_COMMA logical_or } | ε

# === CONTROL FLOW ===
if_stmt                 ::= TOK_IF TOK_L_PAREN logical_or TOK_R_PAREN body_def elif_blocks TOK_ELSE body_def
                          | TOK_IF TOK_L_PAREN logical_or TOK_R_PAREN body_def elif_blocks

elif_blocks             ::= TOK_ELIF TOK_L_PAREN logical_or TOK_R_PAREN body_def elif_blocks | ε
while_stmt              ::= TOK_WHILE_LOOP TOK_L_PAREN logical_or TOK_R_PAREN body_def
for_stmt                ::= TOK_FOR TOK_L_PAREN TOK_ID TOK_IN logical_or TOK_R_PAREN body_def
loop_control_stmt       ::= TOK_BREAK | TOK_CONTINUE

# === TYPES ===
type_definition         ::= TOK_TYPE_INT | TOK_TYPE_STRING | TOK_TYPE_FLOAT | TOK_TYPE_BOOL | TOK_TYPE_LIST
return_type_definition  ::= TOK_TYPE_INT | TOK_TYPE_STRING | TOK_TYPE_FLOAT | TOK_TYPE_BOOL | TOK_TYPE_VOID

# === EXPRESSIONS & LOGIC ===
# Operator precedence (lowest to highest):
#   TOK_OR < TOK_AND < TOK_NOT < comparisons < TOK_PLUS/TOK_MINUS < TOK_STAR/TOK_SLASH < UMINUS

logical_or              ::= logical_and TOK_OR logical_or | logical_and
logical_and             ::= logical_not TOK_AND logical_and | logical_not
logical_not             ::= TOK_NOT logical_not | comparison
comparison              ::= arithmetic comparison_list | arithmetic
comparison_pair         ::= ( TOK_EQUAL_TO | TOK_NOT_EQUAL_TO | TOK_GREATER
                          | TOK_GREATER_EQUAL | TOK_LESS | TOK_LESS_EQUAL ) arithmetic

# === ARITHMETIC ===
arithmetic              ::= arithmetic TOK_PLUS arithmetic
                          | arithmetic TOK_MINUS arithmetic
                          | arithmetic TOK_STAR arithmetic
                          | arithmetic TOK_SLASH arithmetic
                          | TOK_MINUS arithmetic
                          | expr_value

# === VALUES ===
expr_value              ::= factor | string_literal | bool_literal | TOK_ID | primary_expr
factor                  ::= TOK_NUMBER
string_literal          ::= TOK_STRING
bool_literal            ::= TOK_TRUE | TOK_FALSE
